[package]
name = "ratatui-notty"
version = "0.1.0-beta.0"
description = "No-tty backend for the Ratatui Terminal UI library."
documentation = "https://docs.rs/ratatui-notty/"
readme = "README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
exclude.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["underline-color"]

#! The following features are optional and can be enabled to add additional functionality to the
#! library. These features are not required for the library to function, but they may be useful in
#! certain situations.

## Enables serde for crossterm dependency
serde = ["crossterm/serde"]

## enables the backend code that sets the underline color.
## Underline color is not supported on Windows 7.
underline-color = ["ratatui-core/underline-color"]

## Use terminal scrolling regions to make Terminal::insert_before less prone to flickering.
scrolling-regions = ["ratatui-core/scrolling-regions"]

#! The following features are unstable and may change in the future:

## Enable all unstable features.
unstable = ["unstable-backend-writer"]

## Enables getting access to backends' writers.
unstable-backend-writer = []


[dependencies]
cfg-if = "1.0.1"
crossterm = { git = "https://github.com/handewo/crossterm.git", features = ["no-tty"] }
document-features = { workspace = true, optional = true }
instability.workspace = true
ratatui-core.workspace = true
ratatui-crossterm.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
